--- a/src/app/modules/entertainment-page/entertainment-page.component.scss
+++ b/src/app/modules/entertainment-page/entertainment-page.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles.scss';
-
+// @import '../../../styles.scss';
+@import '../../../assets/css/partial/_setting.scss';
 .category
 {
 	padding-top: 0;	
@@ -82,51 +82,7 @@
 			}
 		}
 	}
-	.vf-slider
-	{
-		margin-bottom: 15px;	
-		max-height: 328px;
-		overflow: hidden;	
-		.cover-slider
-		{
-			width: 100% ;
-			height: 328px;
-			@extend %styleimg ;
-		}
-		.bx-wrapper .bx-controls-direction
-		{
-			a
-			{
-				top: auto;
-				bottom: 16px;
-				width: 50px;
-				height: 50px;
-				z-index: 100;
-			}
-			.bx-prev
-			{
-				left: 14px;
-			}
-			.bx-next
-			{
-				right: 18px;
-			}
-		} 
-		.category-slider
-		{
-			width: 100%;
-			>li 
-			{
-				float: left;
-				width: 100%;
-				>a 
-				{
-					width: 100%;
-					display: block;
-				}
-			}
-		}
-	}
+	
 	.ttIntroduce
 	{
 		margin: 35px 0;
@@ -246,314 +202,13 @@
 			}
 		}
 
-		.contentCategory
-		{
-			// float: $float-right;
-			overflow: $overflow-hidden;
-			width: 100%;	
-
-			.vf-category
-			{
-				@include sizeVideo(196px, 327px);
-				background: #e7e7e7;
-				padding: 0;				
-				.thumbnail
-				{
-					background-size: cover;
-					background-position: 50% 50%;
-					@include sizeVideo(100%, 196px);
-					a 
-					{
-						display: $display-block;
-						height: 195px;
-					}
-
-				}
-				.meta
-				{
-					padding: 0 10px;
-					margin: 10px 0 5px;
-					.title 
-					{
-						a 
-						{
-							@include styleText(#171717, 14px);
-							display: $display-block;
-						    text-overflow: ellipsis;
-						    overflow: $overflow-hidden;
-						     white-space: nowrap;
-						}						
-						
-					}
-				}
-				.desc-intro
-				{
-					@include styleText(#757575, 13px);
-					max-height: 50px;
-					overflow: $overflow-hidden;
-					padding: 0 10px;
-					line-height: 17px;
-					h1,h2,h3,h4,h5,h6 
-					{
-						@include styleText(#757575, 13px);
-						line-height: 16px;
-						font-weight: normal;
-					}
-				}
-
-				.desc-intro + ul 
-				{
-					position: absolute;
-					bottom: 10px;
-					width: 100%;
-					left: 10px;
-					li 
-					{
-						@include styleText(#818181, 12px);
-						display: $display-inlinebl;
-						padding-right: 15px;
-						span.arrow-right
-						{
-							@extend %arrow-right;
-							border-left: 11px solid #c1c1c1;
-							display: $display-inlinebl;
-							margin-right: 5px;
-						}
-						.ti-eye
-						{
-							font-size: 14px;
-							color:#c1c1c1;
-							padding-right: 2px;
-						}
-					}
-					.videoTotal
-					{
-						@include styleText(#818181, 12px);
-						background: none;
-						position: relative;
-						bottom: 0;
-						left: 0;
-					}
-					.watch-count
-					{
-						
-						@include styleText(#818181, 12px);
-					}
-				}
-
-			}
-		}	
+		
 	}
 	
 
-	.golfList
-	{
-		border: none;
-	}
-	.sectioncontent
-	{
-		.newvideolist
-		{			
-			.video:nth-child(n+13)
-			{
-				display: block; 
-			}
-		}
-	}
-
-	.sectioncontent
-	{
-		.listPlaylist
-		{			
-			@extend .listvideo;
-			.videocatepl
-			{
-				height: 280px;
-				.thumbnail
-				{
-					height: 196px;
-				}
-			}
-		}
-	}
-
-	.sectioncontent
-	{
-		.subPlaylist
-		{
-			.videocatepl
-			{
-				height: 280px;
-				.thumbnail
-				{
-					height: 196px;
-				}
-			}
-		}
-	}
 
 }
-.hotPlaylistSection
-{
-	padding-bottom: 20px;
-	padding-top: 0;	
-	header.menuSection
-	{
-		padding-bottom: 10px;
-	}	
-	.hotPlaylistvideo
-	{		
-		.bxslider
-		{
-			overflow: hidden;
-			max-height: 342px;
-		}
-		.bx-wrapper
-		{
-			.bxslider
-			{
-				overflow: initial ;
-				max-height: auto;
-			}
-		}
-		ul.bxslider li 
-		{
-			margin: 0 6px;
-			float: left;
-			.video 
-			{
-				margin: 0;
-			}
-		}			
-		.video
-		{
-			@include sizeVideo(196px, 327px);
-			background: #e7e7e7;
-			padding: 0;								
-			.thumbnail
-			{
-				background-size: cover;
-				background-position: 50% 50%;
-				@include sizeVideo(100%, 195px);
-				a 
-				{
-					display: $display-block;
-					height: 195px;
-				}
 
-			}
-			.meta
-			{
-				padding: 0 10px;
-				margin: 10px 0 5px;
-				.title 
-				{
-					a 
-					{
-						@include styleText(#171717, 14px);
-						display: $display-block;
-					    text-overflow: ellipsis;
-					    overflow: $overflow-hidden;
-					     white-space: nowrap;
-					}						
-					
-				}
-			}
-			.desc-intro
-			{
-				@include styleText(#757575, 13px);
-				max-height: 50px;
-				overflow: $overflow-hidden;
-				padding: 0 10px;
-				line-height: 17px;
-				h1,h2,h3,h4,h5,h6 
-				{
-					@include styleText(#757575, 13px);
-					line-height: 16px;
-					font-weight: normal;
-				}
-			}
 
-			.desc-intro + ul 
-			{
-				position: absolute;
-				bottom: 10px;
-				width: 100%;
-				left: 10px;
-				li 
-				{
-					@include styleText(#818181, 12px);
-					display: $display-inlinebl;
-					padding-right: 15px;
-					span.arrow-right
-					{
-						@extend %arrow-right;
-						border-left: 11px solid #c1c1c1;
-						display: $display-inlinebl;							
-					}
-					.ti-eye
-					{
-						font-size: 14px;
-						color:#c1c1c1;
-						padding-right: 2px;
-					}
-				}
-				.videoTotal
-				{
-					@include styleText(#818181, 12px);
-					background: none;
-					position: relative;
-					bottom: 0;
-					left: 0;
-				}
-				.watch-count
-				{
-					
-					@include styleText(#818181, 12px);
-				}
-			}
 
-		}
-	}
-
-	.bx-wrapper
-	{
-		max-width: calc(100% + 6px ) !important;
-	}
-	.bx-wrapper .bx-controls-direction a
-	{
-		top: 80px;
-	}
-	.bx-wrapper .bx-prev
-	{
-		left: -30px;
-	}
-	.bx-wrapper .bx-next
-	{
-		right: -30px;
-	}
-	.bx-wrapper .bx-viewport
-	{
-		left: -6px;
-		width: calc(100% + 6px ) !important;
-	}
-}
-
-.vf-newupdatemusic-section, .vf-newmusic-section
-{
-	@extend .hotPlaylistSection;
-	// .hotPlaylistvideo
-	// {
-	// 	overflow: hidden;
-	// 	max-height: 342px;
-	// 	.bxslider
-	// 	{
-	// 		>li 
-	// 		{
-	// 			float: left;
-	// 		}
-	// 	}
-	// }
-
-}	
 
