--- a/src/app/shared/components/items/genreitem/genreitem.component.scss
+++ b/src/app/shared/components/items/genreitem/genreitem.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../styles.scss';
-
+// @import '../../../../../styles.scss';
+@import '../../../../../assets/css/partial/_setting.scss';
 .genre-items
 {
 	width: 404px;	
