--- a/src/assets/css/_customer.scss
+++ b/src/assets/css/_customer.scss
@@ -1,204 +1,6 @@
-$float-left: left;
-$float-right: right;
-$float-none: none;
-$align-center: center;
-$align-left: left;
-$align-right: right;
-$border-none: none;
-$position-relative: relative;
-$position-absolute: absolute;
-$display-block: block; 
-$display-inlinebl: inline-block;
-$display-none: none;
-$text-uppercase: uppercase;
-$text-none: none;
-$overflow-hidden: hidden;
-$list-style: none;
 
+@import "partial/_setting";
 
-$font-Arial: Arial;
-$bg-white: #fff; 
-$color-hover: #eb4335;
-$font-Roboto: "Roboto";
-@mixin styleText($color, $size)
-{
-	color: $color;
-	font-size: $size;
-	font-family: $font-Arial;
-	text-align: left;
-	@content;
-}
-
-@mixin infosubvideo($color, $background)
-{
-	color: $color;
-	background: $background;
-	position: absolute;
-	bottom: 5px;
-	padding: 2px 4px;
-	z-index: 10;
-	font-family: $font-Arial;
-	font-size: 11px;
-	@content;
-}
-
-@mixin beforeOrafter($left, $right, $top)
-{
-	content: '';
-	position: $position-absolute;
-	left:$left;
-	right:$right;
-	z-index: 10;
-	top:$top;
-	margin: 0 auto;
-	display: $display-block;
-
-}
-
-@mixin sizeVideo($width, $height)
-{
-	width: $width;
-	height: $height;
-}
-
-@mixin selecttags()
-{	
-	position: $position-relative;	
-	width:  calc(100% + 20px);	
-	z-index: 10;
-	cursor: pointer;
-	padding-left: 7px;
-	height: 38px;
-	line-height: 38px;
-	background: transparent;	
-	@include styleText(#a6a5a5, 13px);
-	option 
-	{
-		padding: 5px 10px;
-		line-height: 18px;
-	}
-}
-
-@mixin relapceSelecttag()
-{
-	background: $bg-white;
-	border: 1px solid #cccccc;
-	width: 74px;
-	height: 38px;
-	line-height: 38px;	
-	position: $position-relative;	
-	border-radius: 3px;
-	overflow: $overflow-hidden;
-	&::after 
-	{
-		 border-left: 5px solid transparent;
-	    border-right: 5px solid transparent;
-	    border-top: 5px solid #797979;
-	    content: "";
-	    height: 0;
-	    position: absolute;
-	    right: 10px;
-	    top: 18px;
-	    width: 0;
-	    z-index: 10;
-	}
-
-}
-
-%boxvietsub 
-{
-	position: absolute;
-	top: 0;
-	right: 0;
-	p 
-	{
-		position: relative;
-		z-index: 1;
-		span 
-		{
-			position: relative;
-			z-index: 1;
-			@include styleText(#ffffff, 14px);
-		}
-		&::before
-	{
-		content: '';
-		display: $display-block;
-		position: absolute;
-		right: 0;
-		top:0;
-		width: 0;
-		height: 0;
-		border-top: 60px solid red;
-		border-left: 60px solid transparent;
-		z-index: 0;
-	}
-
-	&::after 
-	{
-		content: '';
-		display: $display-block;
-		position: absolute;
-		right: 0;
-		top:0;
-		width: 60px;
-		height: 40px;
-		background: red;
-		border-radius: 50% / 50%;
-		z-index: 0;
-	}
-	}
-	
-}
-
-%styleinline
-{
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-%styleimg 
-{
-	background-position: 50% 50%;
-	background-size: cover;	
-}
-%marginleft 
-{
-	margin-left: 0;
-}
-%marginright
-{
-	margin-right: 0;
-}
-
-%widthVideohome
-{
-	width: 204px; 
-}
-%arrow-right {
-	width: 0; 
-	height: 0; 
-	border-top: 6px solid transparent;
-	border-bottom: 6px solid transparent;	
-	border-left: 11px solid #e30800;
-}
-%showMore 
-{
-	display: $display-block;
-	margin: 0 auto;
-	@include styleText(#525252, 13px);
-	text-align: center;
-	width: 115px;
-	height: 35px;
-	line-height: 35px;
-	border: 1px solid #cccccc;
-	border-radius: 3px;	
-	margin-top: 20px;
-	&:hover 
-	{
-		background-color: #f4f4f4 ;
-	}
-}
 .showMore
 {
 	@extend %showMore;
