--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,18 +2,18 @@
 @import "assets/css/_iconwebs";
 @import "assets/css/_bigthumb";
 @import "assets/css/relationvideo";
-@import "assets/css/partial/_slidesPlaylist";
-@import "assets/css/partial/_blockplaylists";
-@import "assets/css/partial/_bannerinner.scss";
+// @import "assets/css/partial/_slidesPlaylist";
+// @import "assets/css/partial/_blockplaylists";
+// @import "assets/css/partial/_bannerinner.scss";
 
-@import url(/assets/css/jquery.bxslider.css);
-@import url(/assets/css/recommendation.css);
-@import url(/assets/css/filtrify.css);
-@import url(/assets/css/fastselect.min.css);
-@import url(/assets/css/font-awesome.min.css);
-@import url(/assets/css/glyphicons.min.css);
-@import url(/assets/css/bootstrap.css);
-@import url(/assets/css/bootstrap-wysihtml5.css);
-@import url(/assets/css/simple-line-icons.css);
-@import url(/assets/css/jquery-ui.css);
-@import url(/assets/css/jquery.mCustomScrollbar.css);
+// // @import url(/assets/css/jquery.bxslider.css);
+// @import url(/assets/css/recommendation.css);
+// @import url(/assets/css/filtrify.css);
+// @import url(/assets/css/fastselect.min.css);
+// // @import url(/assets/css/font-awesome.min.css);
+// // @import url(/assets/css/glyphicons.min.css);
+// @import url(/assets/css/bootstrap.css);
+// @import url(/assets/css/bootstrap-wysihtml5.css);
+// // @import url(/assets/css/simple-line-icons.css);
+// @import url(/assets/css/jquery-ui.css);
+// // @import url(/assets/css/jquery.mCustomScrollbar.css);
