--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -1,4 +1,6 @@
-@import '../../../styles.scss';
+// @import '../../../styles.scss';
+@import '../../../assets/css/partial/_setting.scss';
+
 #home-page
 {	
 	padding-top: 20px;
