--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,4 +1,5 @@
-@import "../../../../styles.scss";
+// @import "../../../../styles.scss";
+@import '../../../../assets/css/partial/_setting.scss';
 #footer 
 {
     padding: 28px 0 30px ;
