--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,4 +1,6 @@
-@import "../../../../styles.scss";
+// @import "../../../../styles.scss";
+@import '../../../../assets/css/partial/_setting.scss';
+
 #header
 {	
     clear: both;    
