--- a/src/app/shared/components/items/playlistitemhome/playlistitemhome.component.scss
+++ b/src/app/shared/components/items/playlistitemhome/playlistitemhome.component.scss
@@ -1,4 +1,5 @@
-@import '../../../../../styles.scss';
+// @import '../../../../../styles.scss';
+@import '../../../../../assets/css/partial/_setting.scss';
 .videoPlaylist
 {
     float: $float-left;	
