--- a/src/app/shared/components/items/similarartistitem/similarartistitem.component.scss
+++ b/src/app/shared/components/items/similarartistitem/similarartistitem.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../styles.scss';
-
+// @import '../../../../../styles.scss';
+@import '../../../../../assets/css/partial/_setting.scss';
 .similar-artist
 {
     width: 237px;
