--- a/src/app/shared/components/items/subscriptionchannel/subscriptionchannel.component.scss
+++ b/src/app/shared/components/items/subscriptionchannel/subscriptionchannel.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../styles.scss';
-
+// @import '../../../../../styles.scss';
+@import '../../../../../assets/css/partial/_setting.scss';
 .subscription-container
 {
 	position: $position-relative;
