--- a/src/app/shared/components/items/videoitem/videoitem.component.scss
+++ b/src/app/shared/components/items/videoitem/videoitem.component.scss
@@ -1,5 +1,6 @@
+// @import '../../../../../styles.scss';
+@import '../../../../../assets/css/partial/_setting.scss';
 
-@import '../../../../../styles.scss';
 .video
 {	
     float: $float-left;
