done musicgenre-allplaylists page

--- a/src/app/modules/genredetail/genredetail.component.html
+++ b/src/app/modules/genredetail/genredetail.component.html
@@ -56,7 +56,7 @@
                     Playlist Highlights
                 </h3>
                 <div class="wrap-viewall absolutess">
-                    <a href="#" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>							
+                    <a routerLink="/am-nhac/genre-playlists" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>							
                 </div>
             </header>
             <app-splaylist-slide></app-splaylist-slide>
