--- a/src/app/shared/components/items/bannergenre/bannergenre.component.scss
+++ b/src/app/shared/components/items/bannergenre/bannergenre.component.scss
@@ -1,43 +1,7 @@
 // @import '../../../../../styles.scss';
 @import '../../../../../assets/css/partial/_setting.scss';
 
-.readmore
-{
-	text-align: center;
-	padding-top:10px;
-	a 
-	{
-		display: inline-block;
-		color: #fff;
-		font-size: 20px;
-		padding: 10px;
-		-webkit-transition: 0.4s;
-		-moz-transition: 0.4s;
-		-ms-transition: 0.4s;
-		-o-transition: 0.4s;
-		transition: 0.4s;
 
-		&:hover 
-		{
-			-webkit-transform: scale(1.5);
-			-moz-transform: scale(1.5);
-			-ms-transform: scale(1.5);
-			-o-transform: scale(1.5);
-			transform: scale(1.5);
-
-		}
-		&.active 
-		{
-			-webkit-transform: rotate(180deg);
-			-moz-transform: rotate(180deg);
-			-ms-transform: rotate(180deg);
-			-o-transform: rotate(180deg);
-			transform: rotate(180deg);
-			
-		}
-		
-	}	
-}
 .wrap-bannerinner
 {
 	position: relative;	
@@ -211,9 +175,48 @@
 
 		}
 	}	
+
+	.readmore
+	{
+		text-align: center;
+		padding-top:10px;
+		a 
+		{
+			display: inline-block;
+			color: #fff;
+			font-size: 20px;
+			padding: 10px;
+			-webkit-transition: 0.4s;
+			-moz-transition: 0.4s;
+			-ms-transition: 0.4s;
+			-o-transition: 0.4s;
+			transition: 0.4s;
+	
+			&:hover 
+			{
+				-webkit-transform: scale(1.5);
+				-moz-transform: scale(1.5);
+				-ms-transform: scale(1.5);
+				-o-transform: scale(1.5);
+				transform: scale(1.5);
+	
+			}
+			&.active 
+			{
+				-webkit-transform: rotate(180deg);
+				-moz-transform: rotate(180deg);
+				-ms-transform: rotate(180deg);
+				-o-transform: rotate(180deg);
+				transform: rotate(180deg);
+				
+			}
+			
+		}	
+	}
 }
 .wrap-bannerinnerHD
 {
+	margin-bottom: 20px;
 	.wrap-thumbitems
 	{
 		width: 100%;
@@ -226,6 +229,7 @@
 			background-position: 50% 50%;
 			display: block;
 			float: left;
+			width: 10%;                 
 		}
 	}
 	.wrap-boxinfo
