done artist all playlists page

--- a/src/app/modules/artist-playlists-page/artist-playlists-page.component.html
+++ b/src/app/modules/artist-playlists-page/artist-playlists-page.component.html
@@ -1,3 +1,40 @@
-<p>
-  artist-playlists-page works!
-</p>
+<div class="full-width internalPage  vf-artist-allplaylists-page">
+  <div class="wrapcontainer">	
+   <app-bannerartist></app-bannerartist>	
+   </div>
+   <div class="container">
+     <div class="wrap-topsidebar">   
+      <ul class="wrap">
+        <li>Albums</li>
+      </ul>
+
+      <div class="sapxep">
+        <div class="wrap-selecttag">
+          <select>                        
+            <option value="#" selected>Nổi bật nhất</option>
+            <option value="#" >Sắp xếp theo tên</option>            
+          </select>
+        </div>
+      </div>
+      <div class="clear"></div>
+      </div>
+      
+      <div class="listplaylists">
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+          <app-playlistitem></app-playlistitem>
+      </div>
+    </div>			
+ 	
+</div>
