--- a/src/app/modules/artistdetail/artistdetail.component.html
+++ b/src/app/modules/artistdetail/artistdetail.component.html
@@ -60,7 +60,7 @@
                 Albums
             </h3>
             <div class="wrap-viewall absolutess">
-                <a href="#" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>							
+                <a routerLink="/am-nhac/artist-playlists" class="showall" title="Xem tất cả"> View all <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>							
             </div>
         </header>
         <app-splaylist-slide></app-splaylist-slide>
