--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -84,6 +84,9 @@
           <li  [routerLinkActive]="['active']" title="Âm nhạc">
             <a title="Âm nhạc" routerLink="video" >Video </a>
           </li>
+          <li  [routerLinkActive]="['active']" title="Tìm kiếm">
+              <a title="Tìm kiếm" routerLink="search" >Search </a>
+            </li>
         </ul>
       </nav>
       
