--- a/src/app/shared/components/items/artistitem/artistitem.component.html
+++ b/src/app/shared/components/items/artistitem/artistitem.component.html
@@ -1,6 +1,7 @@
 <article class="artist-item">						
     <div class="wrap-thumb">
-      <p class="thumbnail" style="background-image:url(./assets/images/adele.png) "><a routerLink="/am-nhac/artist-detail" title="Adele" ></a></p> 
+      <p class="thumbnail" style="background-image:url(./assets/images/adele.png) ">
+        <a routerLink="/am-nhac/artist-detail" title="Adele" ></a></p> 
       <button class="vf-followplbtn" title="Theo dõi nghệ sĩ">
         <span class=" followpl-icon">
             <i class="fa fa-star-o" aria-hidden="true"></i>
