--- a/src/app/shared/components/items/playlistitem/playlistitem.component.html
+++ b/src/app/shared/components/items/playlistitem/playlistitem.component.html
@@ -19,7 +19,7 @@
       </h3>												
     </header>
     <p class="uploader">
-      <a title="videofly" href="#">Video fly</a>
+      <a title="videofly" routerLink="/channel-detail">Video fly</a>
       <span class="vf-confirm" title="Đã xác nhận">
         <i class="fa fa-check-square" aria-hidden="true"></i>
       </span>
