done channel all videos page and channel all playlists page

--- a/src/app/shared/components/items/banneraccount/banneraccount.component.html
+++ b/src/app/shared/components/items/banneraccount/banneraccount.component.html
@@ -65,11 +65,11 @@
 
 <aside class="vf-menu-channel">
   <ul>
-    <li><a class="active" href="#">Kênh chính </a></li>
-    <li><a href="#">Video </a></li>
-    <li><a href="#">Danh sách phát </a></li>
-    <li><a href="#">Kênh</a></li>
-    <li><a href="#">Giới thiệu </a></li>
+    <li><a class="active" routerLink="/channel-detail">Kênh chính </a></li>
+    <li><a routerLink="/channel-videos">Video </a></li>
+    <li><a routerLink="/channel-playlists">Danh sách phát </a></li>
+    <li><a routerLink="/channel-subchannels">Kênh</a></li>
+    <li><a routerLink="/channel-about">Giới thiệu </a></li>
     <li>
       <button><span class="icon-webs searchicon"></span></button>
       <input type="text" name="search_chanlel" placeholder="Bạn muốn tìm gì?">
