done channel-suggest-channel page

--- a/src/app/shared/components/items/banneraccount/banneraccount.component.html
+++ b/src/app/shared/components/items/banneraccount/banneraccount.component.html
@@ -68,8 +68,8 @@
     <li><a class="active" routerLink="/channel-detail">Kênh chính </a></li>
     <li><a routerLink="/channel-videos">Video </a></li>
     <li><a routerLink="/channel-playlists">Danh sách phát </a></li>
-    <li><a routerLink="/channel-subchannels">Kênh</a></li>
-    <li><a routerLink="/channel-about">Giới thiệu </a></li>
+    <li><a routerLink="/channel-channelsuggest">Kênh</a></li>
+    <li><a routerLink="/channel-infomation">Giới thiệu </a></li>
     <li>
       <button><span class="icon-webs searchicon"></span></button>
       <input type="text" name="search_chanlel" placeholder="Bạn muốn tìm gì?">
